vlib/v/parser/tests/unexpected_keyword.vv
struct Abc {
	x int
}

fn (s Abc) import(name string) {
	println(name)
}

fn main() {
	s := Abc{}
	s.import('lib')
}
